Sticking to 0.10 for karma version
Following toranb's lead here:

https://github.com/toranb/ember-testing-example/commit/26df4a7bfbc01f41e1e831f88ab6bb3208f5be98

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
         "jslint": "*",
-        "karma": "*",
+        "karma": "0.10",
         "karma-qunit": "*",
         "karma-ember-preprocessor": "*",
         "karma-junit-reporter": "*"
